[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
graphql_client = { version = "0.14", features = ["reqwest-blocking"] }
snafu = "0.8"
prettytable-rs = "^0.10.0"
serde = { version = "1" }
gix = "0.73"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
