[package]
name = "kvs"
version = "0.1.0"
authors = ["mag1cian <mag1cian@icloud.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tempfile = "3.9.0"
walkdir = "2.4.0"
slog = { version = "2.7.0" }




[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"